# delaches

./: .gitignore  Cargo.toml  README.md  build.rs  import_data.py  justfile  manage.py  requirements.txt  schema.sql
.cargo/: config.toml
assets/: colors.css  styles.css  table.css
members/: __init__.py  auth.py  main.py  members.py  models.py
members/templates/: 404.html  index.html  login.html  member.html  members.html  receipt.txt
public/: 404.html  index.html  members.html
src/: auth.rs  csv.rs  db.rs  error.rs  lib.rs  main.rs  member.rs  schema.sql  server.rs  user.rs
src/api/: member.rs  mod.rs  transaction.rs
src/templates/: base.jinja  landing.jinja  member.jinja  members.jinja
src/templates/fragments/: members.jinja
src/templates/pages/: base.jinja  members.jinja
style/: base.css  table.css
templates/: base.jinja  home.jinja
