[package]
name = "delaches"
description = "Delaches member management application"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "ws"] }
clap = { version = "4.5.13", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.22"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = [
    "time",
    "macros",
    "runtime-tokio",
    "sqlite",
] }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8.19", features = ["parse"] }
tower-cookies = { version = "0.10.0", features = ["private", "signed"] }
tower-http = { version = "0.5.2", features = ["fs"] }
